--- a/js/index.html
+++ b/js/index.html
@@ -19,6 +19,8 @@
 
   <script type="module">
     import { Dcm2niix } from './dist/index.js';
+    // use below line for jpegls version
+    // import { Dcm2niix } from './dist/index.jpegls.js';
 
     const fileInput = document.getElementById('fileInput');
     const processButton = document.getElementById('processButton');
